--- a/css/styles-m-a4p.css
+++ b/css/styles-m-a4p.css
@@ -1629,7 +1629,7 @@ body.article .site-footer { padding-top: 35px; }
 .article-title .inside { position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
 .article-title .inside > * { width: 100%; }
 
-.article-title .at-illust { -ms-flex-negative: 0; flex-shrink: 0; -webkit-box-ordinal-group: 3; -ms-flex-order: 2; order: 2; border-radius: 10px; margin-bottom: -114px; }
+.article-title .at-illust { -ms-flex-negative: 0; flex-shrink: 0; -webkit-box-ordinal-group: 3; -ms-flex-order: 2; order: 2; border-radius: 10px; margin-bottom: -114px; height: 100%; }
 
 .article-title .at-content { -webkit-box-ordinal-group: 2; -ms-flex-order: 1; order: 1; position: relative; }
 
@@ -1706,9 +1706,9 @@ body.article .site-footer { padding-top: 35px; }
 .article-content .focus1 .lien1:last-child { margin-right: 0; margin-bottom: 0; }
 
 /*  Team  */
-.article-content .cl-content { padding: 26px 0; margin: 0; }
+.article-content .cl-content { padding: 26px 0; margin: 0 auto; max-width: 400px; }
 
-.article-content .cl-item { padding: 0; border-radius: 10px; margin-bottom: 23px; background: #fff; -webkit-box-shadow: 5px 10px 20px rgba(0,0,0,.12); box-shadow: 5px 10px 20px rgba(0,0,0,.12); overflow: hidden; }
+.article-content .cl-item { padding: 0; border-radius: 10px; margin-bottom: 23px; background: #fff; -webkit-box-shadow: 5px 10px 20px rgba(0,0,0,.12); box-shadow: 5px 10px 20px rgba(0,0,0,.12); overflow: hidden;   }
 .article-content .cl-item:last-child { margin-bottom: 0; }
 .article-content .cl-item > * { display: block; padding: 0; }
 
@@ -1820,7 +1820,7 @@ body.article .site-footer { padding-top: 35px; }
 .article-wrapper .article-navigation { margin-right: -20px; margin-left: -20px; }
 
 .article-navigation { padding: 57px 0 63px; margin: 30px 0 0; background: #F1F1F1; }
-.article-navigation .inside { max-width: 800px; }
+.article-navigation .inside { max-width: 400px; }
 
 .an-item { padding: 0; margin-bottom: 35px; }
 .an-item:last-child { margin-bottom: 0; }
@@ -1853,6 +1853,10 @@ html[lang='en'] .an-item-next .an-item-link .icon:before { content: 'Next articl
 
 .an-item-title { font-family: 'Gotham', sans-serif; font-size: 13px; line-height: 1.39; color: #1B2955; font-weight: 900; letter-spacing: .03em; text-transform: uppercase; }
 .an-item-publication { display: none; }
+
+
+
+
 
 /* ------------------------------------------------------------ *\
     Survey Vote
