--- a/css/styles-m-a4p.css
+++ b/css/styles-m-a4p.css
@@ -2289,4 +2289,5 @@ body.partner .block-page.partner-list .inside { padding-top: 20px; }
 
 /*div*/
 .breadcrumb-nav { display: none;  }
-.front .block-page .focus1+.focus1 a.externe.lien1 {background-color: #e26c5b; }
+
+.front .block-page .focus1+.focus1 a.externe.lien1, .site-banner .quicklinks.mobile li:last-child .btn-primary { background-color: #e26c5b; }
